Fix issues with tooltips and deck builder on mobile (#1097)
- Fixes issue with save button not showing for some people on mobile
- Fixes issue where the tooltip would display in the wrong place for
some elements
- Fixes issue where the tooltip would sometimes show offscreen
- Fixes issue where the status effect tooltips font size was way too big
- Fixes scrollbars sometimes appearing when clicking on tooltips
- Makes stats visible in mobile tooltip component, since it was a bit
frustrating building a deck before. This issue will be further
alleviated with PR #1085

--- a/client/src/components/tooltip/tooltip.module.scss
+++ b/client/src/components/tooltip/tooltip.module.scss
@@ -22,16 +22,18 @@
 .tooltipContainer {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .tooltipBox {
 	position: absolute;
 }
 
-@media screen and (max-width: 720px) {
-	.tooltip {
-		overflow: hidden;
-	}
+.tooltip {
+	overflow: hidden;
 }
 
 .smallTooltip {
